--- a/birthdaydemo/pom.xml
+++ b/birthdaydemo/pom.xml
@@ -63,6 +63,12 @@
       <artifactId>jstl</artifactId>
       <version>1.2</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis</artifactId>
+      <version>3.5.3</version>
+    </dependency>
   </dependencies>
 
   <build>
